<resources>
    <string name="app_name">PLAY JUEGOS</string>
    <string name="button1">PLAY</string>
    <string name="button2">NEW PLAYER</string>
    <string name="button3">PREFERENCES</string>
    <string name="button4">ABOUT</string>

    <string name="Name">Name</string>
    <string name="PhoneticName">Phonetic name</string>
    <string name="Nickname">Nickname</string>
    <string name="tlf">Telefono</string>
    <string name="email">Email</string>

    <string name="action_settings">Opciones</string>
    <string name="action_search">Buscar</string>
    <string name="action_add">Añadir</string>

    <string name="fab">fab</string>

    <string name="textPlataforma">Plataformas:</string>
    <string name="textGeneros">Generos:</string>

    <string name="note1">Accion</string>
    <string name="note2">Aventura</string>
    <string name="note3">Deportes</string>
    <string name="note4">Disparos</string>
    <string name="note5">Estrategia</string>
    <string name="note6">Lucha</string>
    <string name="note7">Musical</string>
    <string name="note8">Rol</string>
    <string name="note9">Simulacion</string>

</resources>