<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"></include>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:stretchColumns="*"
    tools:context=".Newplayer">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imagePerson"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:scrollbarSize="4dp"
            app:srcCompat="@drawable/ic_person_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2">

            <EditText
                android:id="@+id/textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/Name"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2">


            <EditText
                android:id="@+id/textPhoneticName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/PhoneticName" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2">

            <EditText
                android:id="@+id/textNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Nickname" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            app:srcCompat="@drawable/ic_photo_foreground"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/button5"
            style="@style/MyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:shadowColor="#000000"
            android:text="Button" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_phone_foreground" />

        <EditText
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/tlf"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_email_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2">

            <EditText
                android:id="@+id/textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

    </TableRow>
</TableLayout>

</LinearLayout>